# CaptureTheEther_CTFs_foundry

./: .env.example  .gitignore  Makefile  README.md  foundry.toml  hardhat.config.ts  package.json  pyproject.toml  tsconfig.json
script/: 1_DeployGuessTheNumber.s.sol  1_SolveGuessTheNumber.s.sol  GuessTheNumber.s.sol
script/accounts/: 9_DeployFuzzyIdentity.s.sol
script/lotteries/: 1_DeployGuessTheNumber.s.sol  1_SolveGuessTheNumber.s.sol  2_DeployGuessTheSecretNumber.s.sol  2_SolveGuessTheSecretRandomNumber.s.sol  3_DeployGuessTheRandomNumber.s.sol  3_SolveGuessTheRandomNumber.s.sol  4_DeployGuessTheNewNumber.s.sol  4_SolveGuessTheNewNumber.s.sol  5_DeployPredictTheFuture.s.sol  5_SolvePredictTheFuture.s.sol  6_DeployPredictTheBlockHash.s.sol  7_DeployPredictTheBlockHash.s.sol
script/math/: 8_DeployRetirementFund.s.sol  8_SolveRetirementFund.s.sol
script/miscellaneous/: 6_DeployTokenBank.s.sol
scripts-hardhat/: 5_SolvePredictTheFuture.ts  7_SolvePredictTheBlockhash.ts  abi-format.ts
scripts-python/: README.md  pyproject.toml
scripts-python/scripts_python/: badcode.py
src/: GuessTheNumber.sol
src/accounts/: FuzzyIdentity.sol  FuzzyIdentityAttacker.sol
src/lotteries/: 2_GuessTheSecretNumber.sol  3_GuessTheRandomNumber.sol  4_GuessTheNewNumberSolver.sol  5_PredictTheFuture.sol  5_PredictTheFutureSolver.sol  GuessTheNewNumber.sol  GuessTheNewNumberSolver.sol  GuessTheNumber.sol  GuessTheRandomNumber.sol  GuessTheSecretNumber.sol  PredictTheBlockHash.sol  PredictTheFuture.sol  PredictTheFutureSolver.sol
test/: 1_GuessTheNumber.t.sol  GuessTheNumber.t.sol
(+19 files in other folders)
