[tool.poetry]
name = "capturetheether-ctfs-foundry"
version = "0.1.0"
description = ""
authors = ["Ratimon <ratixoxo@gmail.com>"]
readme = "README.md"
# packages = [{include = "capturetheether_ctfs_foundry"}]

[tool.poetry.dependencies]
python = "^3.10"
ethereum = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"